2004-03-20  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdldock/gdl/Makefile.am: Make the generated source files depend
	on the custom files too.
	* gdldock/gdl/DockLayout.custom: Fix list elements leak.

2004-03-20  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdldock/gdl/Makefile.am: 
	* gdldock/gdl/Gdl.metadata: 
	* gdldock/gdl/DockLayout.custom: Provide a customized GetLayouts
	to return a string[] instead of a GLib.List.
	* src/Main/Base/Gui/IWorkbenchLayout.cs:
	* src/Main/Base/Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	Support for different sets of layouts depending on the workbench
	context.  Implement Layouts property.  Layouts are saved to the
	xml file with fully qualified names such as "Context.Layout
	name".  CurrentLayout hides the context prefix, so the value
	set/retrieved is just the layout name.
	* data/resources/glade/Base.glade:
	* src/Main/Base/Gui/Dialogs/NewLayoutDialog.cs: New dialog used to
	retrieve the name of the layout being created.
	* src/Main/Base/Makefile.am: Add NewLayoutDialog.cs to the build.
	* build/AddIns/SharpDevelopCore.addin:
	* src/Main/Base/Commands/ToolsCommands.cs:
	* src/Main/Base/Commands/MenuItemBuilders.cs: Add layouts menu.

2004-03-20	John BouAntoun  <jba-mono@optusnet.com.au>

	* src/Main/Base/Commands/MenuItemBuilders.cs : made it prompt 
	user for launching exteranl tool if set in options
	* src/Main/Base/Services/MessageService.cs: added generic 
	text prompting dialog, GetTextResponse() for above change:
	* src/Libraries/MonoDevelop.Core/Services/IMessageService.cs: 
	added prototype for GetTextResponse() for above change:

2004-03-19  John Luke  <jluke@cfl.rr.com>

	* src/Main/Base/Gui/IProgressMonitor.cs:
	* src/Main/Base/Gui/CompletionDatabaseWizard/GenerateDatabase.cs:
	* src/Main/Base/Services/StatusBar/IStatusBarService.cs:
	* src/Main/Base/Services/StatusBar/DefaultStatusBarService.cs:
	* src/Main/Base/Commands/FileCommands.cs:
	* src/Main/Base/Gui/Components/StatusBar/SdStatusBar.cs: