@@ -1,0 +1,14 @@
+// DockObject.custom - customizations to Gdl.DockObject
+//
+// Authors: Gustavo Giráldez  <gustavo.giraldez@gmx.net>
+
+[DllImport("gdldock")]
+static extern void gdl_dock_object_present(IntPtr raw, IntPtr child);
+
+public void Present (Gdl.DockObject child) {
+	if (child != null)
+		gdl_dock_object_present (Handle, child.Handle);
+	else
+		gdl_dock_object_present (Handle, IntPtr.Zero);
+}
+
